--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Sample Node.js (v22.13) application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+    "start": "node index.js",
+    "dev": "webpack serve --mode development"
   },
   "repository": {
     "type": "git",
@@ -18,5 +20,14 @@
   "homepage": "https://github.com/phongnt/node-sample-app#readme",
   "dependencies": {
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
